First building skeleton

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,7 @@ Session.vim
 
 # KDE directory preferences
 .directory
+
+### SCons ###
+# for projects that use SCons for building: http://http://www.scons.org/
+.sconsign.dblite
