Added Latex report. Build files reorganized, support for scons: Reading SConscript files ... scons: done reading SConscript files. scons: Building targets ... scons: `docs' is up to date. scons: done building targets.. More README edits.

--- a/src/SConscript
+++ b/src/SConscript
@@ -1,18 +1,7 @@
 
-DEBUG = True
-Export('DEBUG')
+Import('DEBUG')
 
-SConscript(dirs=['src'])
-SConscript(dirs=['docs'])
-
-Import('executable')
-Default(executable)
-
-
-comment_str = '''
-DEBUG = True
-
-src_files = Glob('src/*.c') + Glob('src/*/*.c')
+src_files = Glob('*.c') + Glob('*/*.c')
 
 env = Environment()
 env.Append(CCFLAGS=['-std=c99', '-D_GNU_SOURCE'])
@@ -28,8 +17,8 @@ else:
 
 # print env.Dump()  # verbosely displays the building environment
 
-executable = env.Program('scheduletrace', src_files)
+executable = env.Program('../scheduletrace', src_files)
 NoClean(executable)
-'''
+Export('executable')
 
 # vim: set filetype=python:
